Fixed: change Timezone to Local Indonesia

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_URL=http://localhost
 APP_LOCALE=id
 APP_FALLBACK_LOCALE=id
 APP_FAKER_LOCALE="id_ID"
+APP_TIMEZONE="Asia/Makassar"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
